# AdvancedML

./: .gitignore  README.md  pyproject.toml  tasks.py
.claude/: .nfs000000031899318600004fe0
batch/: setup_gpu.sh  train_part_b.sh  train_vae.sh
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
logs/: part_b_27941343.err  part_b_27941343.out  part_b_27941454.out  part_b_27943143.out  vae_27935129_1.err  vae_27935129_1.out  vae_27935129_2.err  vae_27935129_2.out  vae_27935129_3.err  vae_27935129_3.out  vae_27935129_4.err  vae_27935129_4.out  vae_27935129_5.err  vae_27935129_5.out  vae_27935129_6.err  vae_27935129_6.out  vae_27935129_7.err  vae_27935129_7.out  vae_27935129_8.err  vae_27935129_8.out  vae_27935129_9.err  vae_27935129_9.out
models/beta_sweep/b1e+00/gaussian_vae/: gaussian_vae_best.pt  gaussian_vae_final.pt
models/beta_sweep/b1e+00/latent_ddpm/: latent_ddpm_best.pt  latent_ddpm_final.pt
models/beta_sweep/b1e-02/gaussian_vae/: gaussian_vae_best.pt  gaussian_vae_final.pt
models/beta_sweep/b1e-02/latent_ddpm/: latent_ddpm_best.pt  latent_ddpm_final.pt
models/beta_sweep/b1e-04/gaussian_vae/: gaussian_vae_best.pt  (+1 more)
models/gaussian_vae/: gaussian_vae_best.pt  gaussian_vae_final.pt
models/latent_ddpm/: latent_ddpm_best.pt  latent_ddpm_final.pt
reports/: part_a_results.json  part_b_analysis.md  part_b_results.json
scripts/: plot_final_priors.py
src/project/: __init__.py  data.py  ddpm.py  evaluate.py  latent_ddpm.py  model.py  priors.py  run_evaluation.py  run_experiments.py  run_part_b.py  train.py  utils.py  visualize.py
(+6 files in other folders)
